--- a/services.html
+++ b/services.html
@@ -260,7 +260,9 @@
           <p>Seamless car + boat or car + ferry combinations for smooth island trips.</p>
           <p><strong>From €50</strong></p>
             <a href="https://thqcyberdivision.github.io/bookings.html" target="_blank" rel="noreferrer noopener">
-                <img src="https://www.intui.travel/public/upload/B2B/new_2019_banners/EN/business/336_280_Busn_EN.jpg" alt="Banner Travel Agency">
+                     style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
+    🛬 Book an airport or railway transfer
+  </a>
             </a>
           </div>
    
@@ -278,16 +280,6 @@
 
 </div>
 
-<!-- South African Business Incorporation Services -->
-<div class="catalog-item">
-  <img src="https://cdn-icons-png.flaticon.com/512/2991/2991112.png" alt="Business Incorporation Icon">
-  <h3>Business Incorporation Services in South Africa</h3>
-  <p>Register or manage your company in the <strong>Republic of South Africa</strong>. 
-     Get expert guidance, full administrative support, and ensure your business complies with the Republic of South African legal requirements.<br>Waiting Period: 3-5 Business Days.</p>
-  <a href="https://nowpayments.io/payment/?iid=4337282928&source=button" target="_blank" rel="noreferrer noopener">
-    <img src="https://nowpayments.io/images/embeds/payment-button-black.svg" alt="Crypto payment button by NOWPayments">
-</a>
-</div>
           
         <!-- Land for Lease -->
         <div class="catalog-item">
