--- a/services.html
+++ b/services.html
@@ -259,11 +259,10 @@
         <h3>Combined Transfers</h3>
           <p>Seamless car + boat or car + ferry combinations for smooth island trips.</p>
           <p><strong>From €50</strong></p>
-            <a href="https://thqcyberdivision.github.io/bookings.html" target="_blank" rel="noreferrer noopener">
-                     style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
+            <a href="https://thqcyberdivision.github.io/bookings.html" target="_blank" rel="noreferrer noopener" style="background-color: #4169e1; color: white; padding: 10px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; display: inline-block;">
     🛬 Book an airport or railway transfer
   </a>
-            </a>
+            
           </div>
    
 
