--- a/index.html
+++ b/index.html
@@ -363,10 +363,11 @@
     </nav>
     <main>
 	<div class="overlay-tile">
-        <h1>Empowering Your Productivity </h1>
-        <p>At THQ Cyber Division Unincorporated, we offer a range of virtual assistant services designed to support your business and personal needs. Our team of skilled professionals is dedicated to providing top-notch support, allowing you to focus on what matters most.</p>
+        <h1>Enhancing Your Productivity </h1>
+        <p>Empowering your journey with expert virtual assistant services, seamless travel solutions, strategic land leasing, and comprehensive business incorporation support.
+</p>
 <h1>Get Started</h1>
-<p>Whether you need help with document writing, proofreading, data entry, or research, we're here to support you. Contact us today to learn more about our virtual assistant services.</p>
+<p>Whether you're an individual, family, a business, or a club, discover how our digital and physical services can help you achieve more—efficiently, securely, and reliably.</p>
 	
 
         <div class="cta">
