--- a/services.html
+++ b/services.html
@@ -10,23 +10,26 @@
     <title>Services | THQ Cyber Division Unincorporated</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
-    <meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
-    <meta name="author" content="THQ Cyber Division Unincorporated">
+  
     <meta name="google-site-verification" content="Nx8hQYvwpEVXpzDwblQT1xmLanPVBfI_JmBMlXvbBVQ" />
 
     <!-- Open Graph Tags -->
-    <meta property="og:title" content="Virtual Services | THQ Cyber Division Unincorporated">
-    <meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://thqcyberdivision.github.io/">
-    <meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+      <!-- SEO Meta Tags -->
+<meta name="description" content="THQ Cyber Division Unincorporated delivers shuttle and transfer bookings, business incorporation across all 50 US states, land leasing for strategic purposes, and expert virtual assistant and IT support services. Empower your business or organization with secure, reliable solutions.">
+<meta name="keywords" content="shuttle booking, airport transfers, business incorporation, land lease, virtual assistant, IT support, private estate, strategic leasing, THQ Cyber Division, business launch, secure estate, digital services, remote services, book online">
 
-    <!-- Twitter Card Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="THQ Cyber Division Unincorporated">
-    <meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
-    <meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Comprehensive Business & Travel Services | THQ Cyber Division">
+<meta property="og:description" content="Book shuttle transfers, launch your business, lease strategic land, and access expert virtual assistant services—everything you need for secure growth and mobility.">
+<meta property="og:url" content="https://thqcyberdivision.github.io/services.html">
+<meta property="og:image" content="https://thqcyberdivision.github.io/logo.png">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="THQ Cyber Division - Shuttle, Incorporation, Leasing & Virtual Services">
+<meta name="twitter:description" content="From shuttle bookings to land leasing and business incorporation, discover reliable solutions for individuals and organizations worldwide.">
+<meta name="twitter:image" content="https://thqcyberdivision.github.io/logo.png">
 
     <script type="application/ld+json">
         {
