--- a/bookings.html
+++ b/bookings.html
@@ -7,26 +7,30 @@
 <html lang="en">
 <head>
 	<!-- Basic Meta Tags -->
-<title>Airport Transfer | THQ Cyber Division Unincorporated</title>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
-<meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
-<meta name="author" content="THQ Cyber Division Unincorporated">
+
 <meta name="google-site-verification" content="Nx8hQYvwpEVXpzDwblQT1xmLanPVBfI_JmBMlXvbBVQ" />
 
-<!-- Open Graph Tags -->
-<meta property="og:title" content="Airport Transfer | THQ Cyber Division Unincorporated">
-<meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://thqcyberdivision.github.io/">
-<meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<!-- SEO Meta Tags -->
+<title>Airport & Travel Transfer Bookings | THQ Cyber Division</title>
+<meta name="description" content="Book secure, reliable airport transfers and shuttle services with THQ Cyber Division. Enjoy affordable travel solutions, professional drivers, and seamless online booking for individuals and groups.">
+<meta name="keywords" content="airport transfer, travel booking, shuttle service, book online, airport shuttle, private car, local transport, THQ Cyber Division, reliable transfer, group travel, professional drivers">
 
-<!-- Twitter Card Tags -->
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Book Your Airport Transfer | THQ Cyber Division">
+<meta property="og:description" content="Book reliable airport transfers, shuttles, and travel services online. Trusted by individuals and organizations for secure and affordable travel.">
+<meta property="og:url" content="https://thqcyberdivision.github.io/bookings.html">
+<meta property="og:image" content="https://thqcyberdivision.github.io/logo.png">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="THQ Cyber Division Unincorporated">
-<meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
-<meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+<meta name="twitter:title" content="Airport & Shuttle Bookings by THQ Cyber Division">
+<meta name="twitter:description" content="Affordable airport transfers and shuttle services. Book online quickly and travel with confidence.">
+<meta name="twitter:image" content="https://thqcyberdivision.github.io/logo.png">
+
 <script type="application/ld+json">
 	{
 	  "@context": "https://schema.org",
