--- a/index.html
+++ b/index.html
@@ -304,10 +304,11 @@
         <h1>Welcome to THQ Cyber Division</h1>
     </header>
     <nav>
-        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+        <a href="https://thqcyberdivision.github.io/index.html" class="active">Home</a>
         <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     </nav>
+ <a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
     <main>
 	<div class="overlay-tile">
         <h1>Enhancing Your Productivity </h1>
