--- a/services.html
+++ b/services.html
@@ -240,6 +240,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="services.html">Services</a>
+<a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
   </nav>
 
   <main>
