--- a/about.html
+++ b/about.html
@@ -161,6 +161,7 @@
         <a href="https://thqcyberdivision.github.io/index.html">Home</a>
         <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
+<a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
     </nav>
     <main>
 	<div class="overlay-tile">
