--- a/about.html
+++ b/about.html
@@ -159,9 +159,10 @@
     </header>
     <nav>
         <a href="https://thqcyberdivision.github.io/index.html">Home</a>
-        <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+        <a href="https://thqcyberdivision.github.io/about.html" class="active">About Us</a>
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
 <a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
+<a href="contact.html">Contact</a>
     </nav>
     <main>
 	<div class="overlay-tile">
