--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
     
  <a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
+
+<a href="contact.html">Contact</a>
 </nav>
     <main>
 	<div class="overlay-tile">
