--- a/services.html
+++ b/services.html
@@ -237,10 +237,11 @@
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="services.html">Services</a>
+    <a href="https://thqcyberdivision.github.io/index.html">Home</a>
+    <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
+    <a href="https://thqcyberdivision.github.io/services.html" class="active">Services</a>
 <a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
+<a href="https://thqcyberdivision.github.io/contact.html" >Contact</a>
   </nav>
 
   <main>
@@ -303,8 +304,8 @@
   <footer>
     <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated</p>
     <nav>
-      <a href="terms.html">Terms</a> |
-      <a href="privacy.html">Privacy</a> |
+      <a href="https://thqcyberdivision.github.io/terms.html">Terms</a> |
+      <a href="https://thqcyberdivision.github.io/privacy.html">Privacy</a> |
       <a href="mailto:thqcs@protonmail.com">Contact</a>
     </nav
     <div style="margin-top: 15px;">
