--- a/terms.html
+++ b/terms.html
@@ -115,6 +115,8 @@
         <a href="https://thqcyberdivision.github.io/index.html">Home</a>
         <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
+<a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
+<a href="https://thqcyberdivision.github.io/contact.html">Contact</a>
   </nav>
   <main class="overlay-tile">
     <p>Effective Date: July 9th, Twenty Twenty Five</p>
@@ -140,8 +142,8 @@
   <footer>
     <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated</p>
     <nav>
-            <a href="terms.html">Terms of Use</a> |
-            <a href="privacy.html">Privacy Policy</a> |
+            <a href="https://thqcyberdivision.github.io/terms.html">Terms of Use</a> |
+            <a href="https://thqcyberdivision.github.io/privacy.html">Privacy Policy</a> |
             <a href="mailto:thqcs@protonmail.com">Email Us</a>
           </nav>
   </footer>
