--- a/privacy.html
+++ b/privacy.html
@@ -114,6 +114,8 @@
         <a href="https://thqcyberdivision.github.io/index.html">Home</a>
         <a href="https://thqcyberdivision.github.io/about.html">About Us</a>
         <a href="https://thqcyberdivision.github.io/services.html">Services</a>
+<a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
+<a href="https://thqcyberdivision.github.io/contact.html">Contact</a>
   </nav>
   <main class="overlay-tile">
     <p>Effective Date: July 9th, Twenty Twenty Five</p>
