--- a/privacy.html
+++ b/privacy.html
@@ -141,8 +141,8 @@
   <footer>
   <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
   <nav>
-    <a href="terms.html">Terms of Use</a> |
-    <a href="privacy.html">Privacy Policy</a> |
+    <a href="https://thqcyberdivision.github.io/terms.html">Terms of Use</a> |
+    <a href="https://thqcyberdivision.github.io/privacy.html" class="active">Privacy Policy</a> |
     <a href="mailto:thqcs@protonmail.com">Email Us</a>
   </nav>
 </footer>
